--- a/index.html
+++ b/index.html
@@ -1,77 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-    <title>Civil War Photography</title>
-
+    <title>Chris Dickerman</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 
-  </head>
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
-  <body>
+</head>
 
-    <div class="navbar navbar-static-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Civil War Photography</a>
+<body>
+    <header class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <h1>Chris Dickerman</h1>
+                        <div class="row">
+                            <div class="col-lg-8 col-lg-offset-2">
+                                <p><a href="mailto:crdpilot@gmail.com">crdpilot@gmail.com</a>
+                                </p>
+                                <ul class="list-inline banner-social-buttons">
+                                    <li>
+                                        <a href="http://steamcommunity.com/id/faceciousfactorial/" class="btn btn-default btn-lg"><i class="fa fa-steam fa-fw"></i> <span class="network-name">Steam</span></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://github.com/TheDemx27" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://soundcloud.com/thedemx" class="btn btn-default btn-lg"><i class="fa fa-soundcloud fa-fw"></i> <span class="network-name">Sounds</span></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Documenting a War Like Never Before.</h1>
-        <p>Photography pioneers went to great lengths to document the many battles in the civil war. The images they brought back gave citizens an idea of what war truly looks like.</p>
-       </div>
-    </div>
-
-    <div class="container">
-      
-      <div class="row">
-        <div class="col-md-4" style="text-align: center;">
-			<img src="img/soldiers-eating.jpg" class ="img-circle"/>
-          <h2>Society</h2>
-          <p>Just twenty years after cameras were really invented, cameras already started to have a number of profound effects on society at the time.</p>
-          <p><a class="btn btn-default" href="society.html" role="button">Read More &raquo;</a></p>
-        </div>
-        <div class="col-md-4" style="text-align: center;">
-			<img src="img/camera.jpg" class="img-circle"/>
-          <h2>Science</h2>
-          <p>Learn all about how cameras actually worked, what laws of the sciences they exploit, and all the natural properties pertaining to this process.</p>
-          <p><a class="btn btn-default" href="science.html" role="button">Read More &raquo;</a></p>
-       </div>
-        <div class="col-md-4" style="text-align: center;">
-			<img src="img/soldiers.jpg" class ="img-circle"/>
-          <h2>The War</h2>
-          <p>Photographs gave the power to sway elections and spread ideas. Coupled with the press, photographs may have altered how we look at the war.</p>
-          <p><a class="btn btn-default" href="war.html" role="button">Read More &raquo;</a></p>
-        </div>
-      </div>
-
-		<hr class="featurette-divider">
-
-
-      <footer>
-        <p>&copy; Christopher Dickerman 2014</p>
-      </footer>
-    </div>
-
-
-	  <!-- SCRIPTS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-  </body>
+    </header>
+</body>
 </html>
