--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                                 </p>
                                 <ul class="list-inline banner-social-buttons">
                                     <li>
-                                        <a href="http://steamcommunity.com/id/faceciousfactorial/" class="btn btn-default btn-lg"><i class="fa fa-steam fa-fw"></i> <span class="network-name">Steam</span></a>
+                                        <a href="http://steamcommunity.com/id/faceciousfactorial/" class="btn btn-default btn-lg"><span class="network-name">Steam</span></a>
                                     </li>
                                     <li>
-                                        <a href="https://github.com/TheDemx27" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                        <a href="https://github.com/TheDemx27" class="btn btn-default btn-lg"><span class="network-name">Github</span></a>
                                     </li>
                                     <li>
-                                        <a href="https://soundcloud.com/thedemx" class="btn btn-default btn-lg"><i class="fa fa-soundcloud fa-fw"></i> <span class="network-name">Sounds</span></a>
+                                        <a href="https://soundcloud.com/thedemx" class="btn btn-default btn-lg"><span class="network-name">Sounds</span></a>
                                     </li>
                                 </ul>
                             </div>
