--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                         <a href="https://github.com/TheDemx27" class="btn btn-default btn-lg"><span class="network-name">Github</span></a>
                                     </li>
                                     <li>
-                                        <a href="https://soundcloud.com/thedemx" class="btn btn-default btn-lg"><span class="network-name">Sounds</span></a>
+                                        <a href="https://soundcloud.com/prodixie" class="btn btn-default btn-lg"><span class="network-name">Sounds</span></a>
                                     </li>
                                 </ul>
                             </div>
